force-app/main/default/objects/AFSC__FS_Quarantine__c/AFSC__FS_Quarantine__c.object-meta.xml
<CustomObject>
    <label>Quarantine</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Quarantine Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarantines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>