force-app/main/default/objects/AFSC__FS_Quarantine__c/fields/AFSC__Deleted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Deleted_Date_Time__c</fullName>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>