force-app/main/default/objects/AFSC__FS_Quarantine__c/fields/AFSC__File_Name__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>