force-app/main/default/objects/AFSC__FS_Quarantine__c/fields/AFSC__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>Content Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>