force-app/main/default/objects/AFSC__FS_Quarantine__c/fields/AFSC__Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Parent_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Parent Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>