force-app/main/default/objects/AFSC__FS_Quarantine__c/fields/AFSC__Reason__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Reason__c</fullName>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>